microservices-k8s-example/k8s/order-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service-service
spec:
  selector:
    app: order-service
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
