microservices-k8s-example/k8s/product-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service-service
spec:
  selector:
    app: product-service
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
